# t-rust-less

./: Cargo.toml
lib/src/otp/: mod.rs
lib/src/secrets_store/: mod.rs  multi_lane.rs
lib/src/service/: remote.rs
ui/: Cargo.toml
ui/src/: error_panel.rs  hotkeys.rs  locked.rs  main.rs  main_frame.rs  properties.rs  property_password_view.rs  property_simple_view.rs  property_totp_view.rs  property_view.rs  secret_list_element.rs  secret_list_view.rs  secret_version_view.rs  secret_versions_select.rs  secret_view.rs  style.rs  unlocked.rs
